--- a/quadequation.html
+++ b/quadequation.html
@@ -32,7 +32,7 @@
                     <td><input type="number" name="c" value="0" placeholder='0'></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="Розрахувати" onclick="calculate()"></td>
+                    <td><input type="button" value="Розрахувати" onclick="writeOnPage()"></td>
                     <td><input type="reset"></td>
                 </tr>
             </table>
