--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <nav>
             <a href="index.html" style="text-decoration:overline">Головна</a>
             <a href="quadequation.html">Квадратне рівняння (JS_1)</a>
+            <a href="fibonacci.html">Фібоначі (JS_2)</a>
         </nav>
     </header>
 </body>
