--- a/fibonacci.html
+++ b/fibonacci.html
@@ -26,7 +26,7 @@
                 </tr>
                 <tr>
                     <td><lable>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></radio></lable></td>
-                    <td><lable>Спадання (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></radio></lable></td>
+                    <td><lable>Черговість знаків (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></radio></lable></td>
                 </tr>
                 <tr>
                     <td><input type="button" value="Розрахувати" onclick="writeOnPage()"></td>
