--- a/quadequation.html
+++ b/quadequation.html
@@ -11,6 +11,7 @@
         <nav>
             <a href="index.html">Головна</a>
             <a href="quadequation.html" style="text-decoration:overline">Квадратне рівняння (JS_1)</a>
+            <a href="fibonacci.html">Фібоначі (JS_2)</a>
         </nav>
     </header>
     <section>
