--- a/fibonacci.html
+++ b/fibonacci.html
@@ -22,7 +22,7 @@
             <table>
                 <tr>
                     <th>Число n = </th>
-                    <td><input type="number" name="n" value="0" placeholder="0"></td>
+                    <td><input type="number" name="n" min="1" value="1" placeholder="1"></td>
                 </tr>
                 <tr>
                     <td><lable>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></radio></lable></td>
