--- a/fibonacci.html
+++ b/fibonacci.html
@@ -25,8 +25,8 @@
                     <td><input type="number" name="n" min="1" max="1474" value="1" placeholder="1 < 1474" title="Від 1 до 1474" required></td>
                 </tr>
                 <tr>
-                    <td><lable>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></radio></lable></td>
-                    <td><lable>Черговість знаків (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></radio></lable></td>
+                    <td><lable>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></lable></td>
+                    <td><lable>Черговість знаків (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></lable></td>
                 </tr>
                 <tr>
                     <td><input type="button" value="Розрахувати" onclick="writeOnPage()"></td>
@@ -34,6 +34,8 @@
                 </tr>
             </table>
         </form>
+        <hr>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvolodymyrcv.github.io%2FJS%2Ffibonacci.html">Валідатор</a>
     </section>
     <script src="js/fibonacci.js"></script>
 </body>
