--- a/quadequation.html
+++ b/quadequation.html
@@ -38,6 +38,8 @@
                 </tr>
             </table>
         </form>
+        <hr>
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fvolodymyrcv.github.io%2FJS%2Fquadequation.html">Валідатор</a>
     </section>
     <script src="js/quadraticEquation.js"></script>
 </body>
