--- a/fibonacci.html
+++ b/fibonacci.html
@@ -25,8 +25,8 @@
                     <td><input type="number" name="n" min="1" max="1474" value="1" placeholder="1 < 1474" title="Від 1 до 1474" required></td>
                 </tr>
                 <tr>
-                    <td><lable>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></lable></td>
-                    <td><lable>Черговість знаків (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></lable></td>
+                    <td>Зростанння (Цикл)<input type="radio" name="growthDecrease" value="Growth" checked></td>
+                    <td>Черговість знаків (Рекурсія)<input type="radio" name="growthDecrease" value="Decrease"></td>
                 </tr>
                 <tr>
                     <td><input type="button" value="Розрахувати" onclick="writeOnPage()"></td>
